0.4.2
-----
   * Bump min Gradle requirement to 6.0
   * Fix HTML reporting failure on JDK17
0.4.0
-----
   * Upgrade to the Provider API
   * Drop support for older Gradle versions (requires 6+)
   * Add support for violation transformers
0.2.9
-----
   * Upgrade to JApiCmp 0.14.3
   * Fixes deprecation warnings with Gradle 6
0.2.8
-----
   * Upgrade to JApiCmp 0.13.1
   * Fix compatibility with Java 9+ (Jaxb)
0.2.7
-----
   * Add support for filters
0.2.5
-----
   * Add support for default rules
0.2.4
-----
   * Use https for external resources in report
   * Add ability to get the current class name in the context
0.2.3
-----
   * Make task cacheable
   * Fix incorrect task @Input annotations
0.2.2
-----
   * Add ability to declare setup and post processor rules
0.2.1
-----
   * Bugfix release
0.2.0
-----
   * Rewrote plugin for Gradle 4+
   * Use the worker API
   * New reporting API
   * Upgrade to JApiCmp 0.10.0
0.1.2
   * Upgrade to JApiCmp 0.7.2
-----
0.1.1
-----
   * Upgrade to Gradle 2.3
   * Upgrade to JApiCmp 0.3.1
0.1.2
-----
   * Upgrade to JApiCmp 0.5.0